Add changelog repo config for lerna-changelog

--- a/package.json
+++ b/package.json
@@ -46,5 +46,8 @@
   "volta": {
     "node": "18.17.0",
     "pnpm": "7.33.5"
+  },
+  "changelog": {
+    "repo": "GavinJoyce/ember-headlessui"
   }
 }
